xiaobuadmin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    nginx.ingress.kubernetes.io/cors-allow-headers: Helper-Token,Helper-Version,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/service-weight: ""
  name: xiaobu-admin
spec:
  rules:
  - host: uat-admin.xiaobu.vip
    http:
      paths:
      - backend:
          serviceName: uat-xiaobu-admin
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - uat-admin.xiaobu.vip
    secretName: xiaobu-admin
